@@ -1,4 +1,4 @@
-SBO-Lib version 3.1
+SBO-Lib version 3.0
 ===================
 
 SBO::Lib is a library for the sbotools scripts.
