@@ -13,7 +13,7 @@ use strict;
 use warnings FATAL => 'all';
 use File::Basename;
 
-our $VERSION = '3.1';
+our $VERSION = '3.0';
 
 sub new {
   my $class = shift;
