@@ -1,4 +1,4 @@
-.TH sboinstall 1 "Setting Orange, The Aftermath 15, 3190 YOLD" "sbotools 3.1" sbotools
+.TH sboinstall 1 "Setting Orange, The Aftermath 15, 3190 YOLD" "sbotools 3.0" sbotools
 .SH NAME
 .P
 .B
