@@ -1,4 +1,4 @@
-.TH sbotools.conf 5 "Setting Orange, The Aftermath 15, 3190 YOLD" "sbotools 3.1" sbotools
+.TH sbotools.conf 5 "Setting Orange, The Aftermath 15, 3190 YOLD" "sbotools 3.0" sbotools
 .SH NAME
 .P
 .B
