@@ -1,7 +1,7 @@
 PRGNAM="sbotools"
-VERSION="3.1"
+VERSION="3.0"
 HOMEPAGE="https://pghvlaans.github.io/sbotools/"
-DOWNLOAD="https://pghvlaans.github.io/sbotools/downloads/sbotools-3.1.tar.gz"
+DOWNLOAD="https://pghvlaans.github.io/sbotools/downloads/sbotools-3.0.tar.gz"
 MD5SUM="@MD5@"
 DOWNLOAD_x86_64=""
 MD5SUM_x86_64=""
